@@ -1,3 +1,7 @@
+2002-12-10  Chema Celorio  <chema@celorio.com>
+
+	* configure.in: remove autoheader warnings, remove acconfig.h
+
 2002-12-10  Dennis Cranston  <dennis_cranston@yahoo.com>
  
 	* capplets/accessibility/keyboard/*.desktop.in:
